--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -72,6 +72,6 @@ jobs:
               run: vendor/bin/pest
               env:
                   DB_CONNECTION: sqlite
-                  DB_DATABASE: :memory:
+                  DB_DATABASE: ":memory:"
                   REDIS_PORT: 6379
             
