--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -37,9 +37,9 @@
         <junit outputFile="build/report.junit.xml"/>
     </logging>
     <php>
-        <env name="DB_CONNECTION" value="mysql"/>
+        <env name="DB_CONNECTION" value="sqlite"/>
         <env name="DB_USERNAME" value="root"/>
-        <env name="DB_DATABASE" value="query_test"/>
+        <env name="DB_DATABASE" value=":memory:"/>
         <env name="DB_HOST" value="127.0.0.1"/>
         <env name="DB_PORT" value="3306"/>
     </php>
