--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -41,13 +41,7 @@ jobs:
 
       postgres:
         image: postgres:17-alpine
-        restart: unless-stopped
-        healthcheck:
-          test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
-          interval: 10s
-          timeout: 5s
-          retries: 5
-        environment:
+        env:
           POSTGRES_DB: query_test
           POSTGRES_USER: user
           POSTGRES_PASSWORD: secret
